@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed number of CGI params is limited to 100 (#3583)
+
 - Fixed duplicated XML and HTML errors from WFS GetFeature (#3571)
 
 - Support group names for GetLegendGraphic and GetStyles (#3411)
